--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ a {
 
 /* clients */
 .clients{
-    margin: 56px 0 104px 0;
+    margin: 56px 0 64px 0;
     
 }
 .clients-wrapper{
@@ -198,11 +198,76 @@ a {
 /* clients end */
 
 /* team */
+.team{
+    margin: 100px 0 40px 0;
+}
+.team-wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.team-item{
+    width: 31%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 60px;
+}
+.team-item-logo{
+    width: 100px;
+    height: 100px;
+}
+.team-item-logo img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+.team-item-info{
+    margin-left: 35px;
+}
+.team-item-avtor{
+    margin-bottom: 11px;
+    font-size: 28px;
+    line-height: 32,17px;
+    color: var(--text-color);
+}
+.team-item-job{
+    font-size: 14px;
+    color: var(--text3-color);
+    line-height: 16px;
+}
 
 /* team end */
 
 /* footer */
-
+.footer{
+    width: 100%;
+    height: 100px;
+    background-color: #F7F7F7;
+}
+.footer-wrapper{
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer-logo{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.footer-logo p{
+    font-size: 14px;
+    font-weight: 700;
+    color: var(--text3-color);
+    margin-left: 20px;
+}
+.footer-social-media a{
+    font-size: 24px;
+    color: var(--text3-color);
+    margin-left: 40px;
+}
 /* footer end */
 
 /* MEDIA QUERY */
